pkglibexecdir = $(libexecdir)/@PACKAGE@
pkglibexec_PROGRAMS = make_quests

EXTRA_DIST = make_tree.c new_quest.c

make_quests_SOURCES = main.c parse_cmd_ln.c parse_cmd_ln.h 

LDADD = \
	$(top_builddir)/src/libs/libio/libio.la \
	$(top_builddir)/src/libs/libmodinv/libmodinv.la \
	$(top_builddir)/src/libs/libcommon/libcommon.la \
	$(top_builddir)/src/libs/libclust/libclust.la \
	$(top_builddir)/src/libs/libmllr/libmllr.la

AM_CFLAGS =-I$(top_srcdir)/include
